Fixed spacing

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -80,42 +80,42 @@ body{
   div{
 
     &.research{
-      margin-top: 5%;
+      margin-top: 10%;
       border-top: .25em $color2 dashed;
     }
 
     &.brainstorming{
-      margin-top: 7.5%;
+      margin-top: 10%;
       border-top: .25em $color3 dashed;
     }
 
     &.idea{
-      margin-top: 7.5%;
+      margin-top: 10%;
       border-top: .25em $color4 dashed;
     }
 
     &.concept{
-      margin-top: 7.5%;
+      margin-top: 10%;
       border-top: .25em $color5 dashed;
     }
 
     &.proto{
-      margin-top: 7.5%;
+      margin-top: 10%;
       border-top: .25em $color6 dashed;
     }
 
     &.user{
-      margin-top: 7.5%;
+      margin-top: 10%;
       border-top: .25em $color7 dashed;
     }
 
     &.eval{
-      margin-top: 7.5%;
+      margin-top: 10%;
       border-top: .25em $color8 dashed;
     }
 
     &.final{
-      margin-top: 7.5%;
+      margin-top: 10%;
       padding-bottom: 5%;
       border-top: .25em $color1 dashed;
     }
@@ -315,7 +315,9 @@ body{
       img{
         display: block;
         height: 100%;
+        width: 100%;
         object-fit: cover;
+        height: 10em;
       }
     }
     }
